transaction view: cleaned 'waiting' next actions - make sure the text wrap on small screens - replace the anchor by a span as there is no associated action

--- a/app/modules/transactions/scss/_actions.scss
+++ b/app/modules/transactions/scss/_actions.scss
@@ -22,9 +22,11 @@
     .action{
       width: 100%;
       max-width: 20em;
-      white-space: nowrap;
       padding: 0.5em;
       margin: 0.5em;
+      &:not(.waiting){
+        white-space: nowrap;
+      }
     }
   }
   /*Large screens*/
